@@ -1,3 +1,10 @@
+seablock = seablock or {}
+seablock.trigger = seablock.trigger or {}
+
+if mods['seablock-mining'] then
+  seablock.trigger.mining_productivity = true
+end
+
 require "prototypes/recipe"
 require "prototypes/recipe-category"
 require "prototypes/technology"
