@@ -17,6 +17,8 @@ Date: ???
     - Lithia salt and Sodium carbonate moved to brown algae processing
     - Bob's Tech setting Science Pack colors update default value set to false. Currently only applies if SCT is disabled
     - Startup techs ignore tech cost multiplier
+    - Hid Electric mining drill and pumpjack
+    - Hid Mining Productivity techs (unless Seablock Mining mod is enabled)
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.0
 Date: 16.12.2020
